# Qt-Quick-Training

./: AlarmSwitch.qml  main.qml
Bars/: Bar.qml  CMakeLists.txt  main.cpp  main.qml
Button/: CMakeLists.txt  SwitchButton.qml  main.cpp  main.qml
Chapters/: CMakeLists.txt  Chapter.qml  main.cpp  main.qml
Data/: CMakeLists.txt  main.cpp
Digital Clock/: AlarmSwitch.qml  Button.qml  Button190x64.qml  Button192x50.qml  Button2.qml  Button434x64.qml  ButtonEveryAndDate.qml  CMakeLists.txt  PageAlarm.qml  PageAlarmComponent.qml  PageAlarmList.qml  PageAlarmListComponent.qml  PageHome.qml  PageSetAlarm.qml  PageTimer.qml  PageTimerArrows.qml  PageTimerBlock.qml  main.cpp  main.qml  res.qrc
Parole/: CMakeLists.txt  main.cpp
Rubrica/: CMakeLists.txt  main.cpp
mediana/: CMakeLists.txt  main.cpp
parole/: CMakeLists.txt  canto1.txt  main.cpp
somma/: CMakeLists.txt  main.cpp
